deploy updated on categories and subcategories
