# internal/api/docs/swagger.json
@@ -384,7 +384,7 @@
                 }
             }
         },
-        "/categories/{uuid}": {
+        "/categories/{id}": {
             "get": {
                 "description": "\"retrieve a single category from database\"",
                 "consumes": [
@@ -400,8 +400,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "category uuid",
-                        "name": "uuid",
+                        "description": "category id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -442,13 +442,13 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "category uuid",
-                        "name": "uuid",
+                        "description": "category id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "category uuid",
+                        "description": "category id",
                         "name": "payload",
                         "in": "body",
                         "required": true,
@@ -487,8 +487,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "category uuid",
-                        "name": "uuid",
+                        "description": "category id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -596,7 +596,7 @@
                 }
             }
         },
-        "/subcategories/{uuid}": {
+        "/subcategories/{id}": {
             "get": {
                 "description": "\"retrieve a single subcategory from database\"",
                 "consumes": [
@@ -612,8 +612,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "subcategory uuid",
-                        "name": "uuid",
+                        "description": "subcategory id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -654,13 +654,13 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "category uuid",
-                        "name": "uuid",
+                        "description": "category id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "category uuid",
+                        "description": "category id",
                         "name": "payload",
                         "in": "body",
                         "required": true,
@@ -699,8 +699,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "subcategory uuid",
-                        "name": "uuid",
+                        "description": "subcategory id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -723,29 +723,6 @@
         }
     },
     "definitions": {
-        "auth.Address": {
-            "type": "object",
-            "required": [
-                "address",
-                "city",
-                "state",
-                "zip_code"
-            ],
-            "properties": {
-                "address": {
-                    "type": "string"
-                },
-                "city": {
-                    "type": "string"
-                },
-                "state": {
-                    "type": "string"
-                },
-                "zip_code": {
-                    "type": "string"
-                }
-            }
-        },
         "auth.AuthResponse": {
             "type": "object",
             "properties": {
@@ -786,19 +763,12 @@
         "auth.RegisterRequest": {
             "type": "object",
             "required": [
-                "addresses",
                 "email",
                 "fullname",
                 "password",
                 "phone_number"
             ],
             "properties": {
-                "addresses": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/auth.Address"
-                    }
-                },
                 "email": {
                     "type": "string"
                 },
@@ -889,12 +859,9 @@
             "type": "object",
             "properties": {
                 "id": {
-                    "type": "integer"
-                },
-                "name": {
                     "type": "string"
                 },
-                "uuid": {
+                "name": {
                     "type": "string"
                 }
             }
@@ -914,12 +881,12 @@
             "type": "object",
             "properties": {
                 "category_id": {
-                    "type": "integer"
-                },
-                "name": {
                     "type": "string"
                 },
-                "uuid": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 }
             }
@@ -932,7 +899,7 @@
             ],
             "properties": {
                 "category_id": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "name": {
                     "type": "string"
